Add test for special characters'

--- a/test/mock/index.html
+++ b/test/mock/index.html
@@ -7,10 +7,12 @@
 <body>
 
 <div id="root"></div>
+<div id="special-characters-test"></div>
 
 <script>
 	window.onload = function() {
 		document.getElementById('root').innerText = 'Hello world from JS!';
+		document.getElementById('special-characters-test').innerText = '저는 7년 동안 한국에서 살았어요. Слава Україні!';
 	};
 </script>
 
