Add block navigation to docs

--- a/test/mock/navigation.html
+++ b/test/mock/navigation.html
@@ -10,8 +10,7 @@
 
 <script>
 	window.onload = function() {
-		//window.location.replace('http://example.com');
-		location.href= 'http://example.com';
+		window.location.replace('http://example.com');
 		document.getElementById('root').innerText = 'Navigation blocked!';
 	};
 </script>
