Fix possible wrong encoding

--- a/test/mock/index.html
+++ b/test/mock/index.html
@@ -17,7 +17,7 @@
 		 * with cheerio and website-scraper itself.
 		 * See https://github.com/cheeriojs/cheerio/pull/2280
 		 */
-		document.getElementById('special-characters-test').innerText = '7년 동안 한국에서 살았어요. Слава Україні!';
+		document.getElementById('special-characters-test').innerText = '7년 동안 한국에서 살았어요. Слава Україні! 磁致伸缩位移传感器 影响大跨度桥梁施工控制的因素';
 	};
 </script>
 
